Fix extension configuration and rebuild website
- Fixed macos-style extension by removing invalid shortcode declaration
- Added glass-card.lua shortcode file to shortcodes directory
- Updated _quarto.yml to remove redundant filter reference
- Rebuilt entire website with updated dependencies

--- a/_extensions/macos-style/_extension.yml
+++ b/_extensions/macos-style/_extension.yml
@@ -4,7 +4,5 @@ version: 1.0.0
 author: Quanjia Xiao
 quarto-required: ">=1.0.0"
 contributes:
-  formats:
-    html:
-      shortcodes:
-        - glass-card.lua
+  filters:
+    - lua/filters.lua
