Remove phone number, Chinese resume, add Blog and Mario game
- Remove phone number from contact info
- Remove Chinese resume link from navbar
- Create Blog page with sample posts
- Create Mario game page with playable platformer game
- Add GitHub Pages deployment config

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,8 +22,10 @@ website:
     right:
       - text: "Home"
         href: index.qmd
-      - text: "中文"
-        href: Chinese.qmd
+      - text: "Blog"
+        href: blog.qmd
+      - text: "Games"
+        href: games.qmd
       - text: "Projects"
         href: publications.qmd
       - text: "CV"
